syntax = "proto3";

package techschool.pcbook;

option go_package = ".;pb";

message Screen {
  message Resoultion {
    uint32 width = 1;
    uint32 height = 2;
  }

  enum Panel {
    UNKNOWN = 0;
    IPS = 1;
    OLED = 2;
  }

  float size_inch = 1;
  Resoultion resolution = 2;
  Panel panel = 3;
  bool multitouch = 4;
}